Removed all scytax errors

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -22,7 +22,9 @@
 
  // Helpers 
 
- .plx30 {}
+ .plx30 {
+     padding-left: 30px;
+ }
 
  // # remove padding between columns 
  .row.no-pad>[class*='col-'] {
