--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -34,17 +34,17 @@
 
 // Testimonial
 
-.testimonial-block{
+// .testimonial-block{
 
-    &--img{
+//     // &--img{
 
-    }
+//     // }
 
-    &--copy{
+//     // &--copy{
 
-    }
+//     // }
 
-}
+// }
 
 
 // Endorsements 
