--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,10 @@ html {
   box-sizing: inherit;
 }
 
+.plx30 {
+  padding-left: 30px;
+}
+
 .row.no-pad > [class*=col-] {
   padding-right: 0;
   padding-left: 0;
