--- a/sass/_quote.scss
+++ b/sass/_quote.scss
@@ -1,7 +1,7 @@
 
-.quotes-block{
-    // max-width: 500px;
-}
+// .quotes-block{
+//     // max-width: 500px;
+// }
 
 .quote{
     max-width: 500px;
