style.css edited online with Bitbucket

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ html {
   /* 2 */
 }
 
+/* hello you heye  */
+
 /* Sections
    ========================================================================== */
 /**
@@ -66,7 +68,7 @@ hr {
   overflow: visible;
   /* 2 */
 }
-
+/* remote chang e */
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
