style.css edited online with Bitbucket

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ abbr[title] {
 }
 
 /**
- * Add the correct font weight in Chrome, Edge, and Safari.
+ * Add the correct font weight in othere hey
  */
 b,
 strong {
@@ -151,7 +151,7 @@ sup {
 }
 
 /* Embedded content
-   ========================================================================== */
+   ========================================== */
 /**
  * Remove the border on images inside links in IE 10.
  */
@@ -163,7 +163,7 @@ img {
    ========================================================================== */
 /**
  * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
+ * 2. Remove the margin in 
  */
 button,
 input,
@@ -1333,3 +1333,4 @@ ul.social i {
 }
 
 /*# sourceMappingURL=style.css.map */
+/* changes from Masagwadi on bit b */
