--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,6 @@ html {
   /* 2 */
 }
 
-/* hello you heye  */
-
 /* Sections
    ========================================================================== */
 /**
@@ -68,7 +66,7 @@ hr {
   overflow: visible;
   /* 2 */
 }
-/* remote chang e */
+
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
@@ -103,7 +101,7 @@ abbr[title] {
 }
 
 /**
- * Add the correct font weight in othere hey
+ * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
@@ -151,7 +149,7 @@ sup {
 }
 
 /* Embedded content
-   ========================================== */
+   ========================================================================== */
 /**
  * Remove the border on images inside links in IE 10.
  */
@@ -163,7 +161,7 @@ img {
    ========================================================================== */
 /**
  * 1. Change the font styles in all browsers.
- * 2. Remove the margin in 
+ * 2. Remove the margin in Firefox and Safari.
  */
 button,
 input,
@@ -416,7 +414,7 @@ body {
 
 .corporates-logo {
   display: inline-block;
-  height: 50px;
+  height: 80px;
   text-align: center;
 }
 .corporates-logo img {
@@ -447,11 +445,16 @@ body {
 /* Hero background image  */
 .highlight {
   padding: 50px 20px;
-  background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/03/RY-online-courses-bg-1.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  position: relative;
   border-bottom: 5px solid #da2128;
+}
+.highlight .background {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 @media (max-width: 480px) {
   .highlight > .container {
@@ -596,11 +599,11 @@ body {
 
 .endorsers {
   display: inline-block;
-  width: 150px;
+  width: 300px;
 }
 .endorsers__title {
   vertical-align: top;
-  padding-top: 13px;
+  padding-top: 27px;
   padding-right: 35px;
   display: inline-block;
 }
@@ -659,7 +662,8 @@ body {
 .info-card__icon {
   display: inline-block;
   height: 35px;
-  width: 35px;
+  width: 100%;
+  text-align: center;
 }
 .info-card__icon i {
   font-size: 35px;
@@ -788,6 +792,7 @@ body {
   line-height: 18px;
   font-family: "Lato", helvetica, arial, sans-serif;
   max-width: 350px;
+  color: #000000;
 }
 
 .quote-bg {
@@ -932,6 +937,7 @@ body {
 .form-info {
   padding: 10px;
   background-color: #ffffff;
+  border-bottom: 1px solid #d8d8d8 !important;
 }
 @media (min-width: 768px) and (max-width: 900px) {
   .form-info {
@@ -1333,4 +1339,3 @@ ul.social i {
 }
 
 /*# sourceMappingURL=style.css.map */
-/* changes from Masagwadi on bit b */
