--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -46,7 +46,7 @@
 
  .corporates-logo {
      display: inline-block;
-     height: 50px;
+     height: 80px;
      text-align: center;
 
      // background-color: red;
@@ -92,10 +92,20 @@
  /* Hero background image  */
  .highlight {
      padding: 50px 20px;
-     background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/03/RY-online-courses-bg-1.jpg);
-     background-position: center;
-     background-repeat: no-repeat;
-     background-size: cover;
+    //  background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/03/RY-online-courses-bg-1.jpg);
+    //  background-position: center;
+    //  background-repeat: no-repeat;
+    //  background-size: cover;
+    position: relative;
+
+    .background{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 
      border-bottom: 5px solid $red;
 
