--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -51,10 +51,10 @@
 
 .endorsers{
     display: inline-block;
-    width: 150px;
+    width: 300px;
     &__title{
         vertical-align: top;
-        padding-top: 13px;
+        padding-top: 27px;
         padding-right: 35px;
         display: inline-block;
     }
@@ -132,7 +132,8 @@
     &__icon{
         display: inline-block;
         height: 35px;
-        width: 35px;
+        width: 100%;
+        text-align: center;
         i{
             font-size: 35px;
             color: $red;
