--- a/sass/_quote.scss
+++ b/sass/_quote.scss
@@ -100,6 +100,7 @@
             line-height: 18px;
             font-family: 'Lato', helvetica, arial, sans-serif;
             max-width: 350px;
+            color: $black;
         }
     }
 }
