--- a/css/style.css
+++ b/css/style.css
@@ -569,6 +569,21 @@ body {
   }
 }
 
+.circle {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  width: 50px;
+  height: 50px;
+  z-index: 9999;
+  transition: 250ms ease all;
+}
+.circle svg {
+  width: 100%;
+  height: 100%;
+  stroke: #da2128 !important;
+}
+
 .lesson-card {
   display: table;
   width: 100%;
