--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -247,3 +247,25 @@
 //     padding-left: 0;
 //     padding-right: 0;
 // }
+
+
+
+
+
+
+
+.circle{
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    z-index: 9999;
+    transition: 250ms ease all;
+
+    svg{
+        width: 100%;
+        height: 100%;
+        stroke: $red !important;
+    }
+}
