--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -26,6 +26,11 @@
      padding-left: 30px;
  }
 
+ .plmx10{
+     @include breakpoint(mobileonly) {
+        padding-left: 10px;
+    }
+ }
  // # remove padding between columns 
  .row.no-pad>[class*='col-'] {
      padding-right: 0;
@@ -256,7 +261,7 @@
 
 .circle{
     position: fixed;
-    top: 10px;
+    bottom: 10px;
     left: 10px;
     width: 50px;
     height: 50px;
