--- a/css/style.css
+++ b/css/style.css
@@ -1096,6 +1096,11 @@ body {
   box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
   transform: rotate(45deg);
 }
+@media (max-width: 480px) {
+  #pardot-form input[type=radio]:checked + label:after {
+    top: 9px;
+  }
+}
 
 .form-container {
   position: relative;
