--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -25,7 +25,8 @@
         display: table-cell;
         height: 50px;
         padding: 10px;
-        font-size: 12px;
+        font-size: 14px;
+        line-height: 18px;
         vertical-align: top;
     }
 }
@@ -115,7 +116,7 @@
         text-align: center;
         padding: 10px 50px 10px 50px;
         font-size: 12px;
-        list-style: 16px;
+        line-height: 16px;
     }
 }
 
