--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -4,7 +4,8 @@ $red: #da2128;
 $yellow: #f1ce00;
 $white: #ffffff;
 $black: #000000;
-$lightgray: #d8d8d8;
+$lightgray: #f1f1f1;
+// $lightgray: #d8d8d8;
 $darkgray: #565759;
 
 $green: #2a8947;
