--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ body {
   font-weight: bold;
 }
 .info-card__intro {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 20px;
 }
 .info-card__cta {
@@ -779,7 +779,6 @@ body {
   .quote__img {
     display: block;
     margin-left: auto;
-    margin-right: auto;
   }
 }
 .quote__img img {
@@ -873,7 +872,7 @@ body {
 }
 
 .cta-btn {
-  padding: 10px 50px 10px 30px;
+  padding: 10px 50px 13px 30px;
   font-family: "Lato", sans-serif;
   font-size: 14px;
   line-height: 18px;
@@ -881,10 +880,11 @@ body {
   display: inline-block;
   border-radius: 5px;
   text-transform: uppercase;
+  text-align: left;
 }
 @media (max-width: 480px) {
   .cta-btn {
-    padding: 15px 80px 15px 15px;
+    padding: 10px 50px 13px 15px;
     font-size: 14px;
     line-height: 16px;
     background-position: 97% 7px;
@@ -1093,6 +1093,7 @@ body {
 #pardot-form input[type=radio] + label:before {
   content: "";
   margin-right: 10px;
+  margin-top: -3px;
   display: inline-block;
   vertical-align: text-top;
   width: 20px;
@@ -1118,7 +1119,7 @@ body {
   content: "";
   position: absolute;
   left: 5px;
-  top: 15px;
+  top: 12px;
   background: white;
   width: 2px;
   height: 2px;
@@ -1127,7 +1128,7 @@ body {
 }
 @media (max-width: 480px) {
   #pardot-form input[type=radio]:checked + label:after {
-    top: 9px;
+    top: 7px;
   }
 }
 
@@ -1284,6 +1285,11 @@ form.form p.no-label {
 
 form.form span.value {
   margin-left: 0px;
+}
+@media (max-width: 480px) {
+  form.form span.value {
+    margin-top: 10px;
+  }
 }
 
 form.form p span.description {
