--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -1,5 +1,5 @@
 .cta-btn{
-    padding: 10px 50px 10px 30px;
+    padding: 10px 50px 13px 30px;
     font-family: "Lato", sans-serif;
     font-size: 14px;
     line-height: 18px;
@@ -7,9 +7,10 @@
     display: inline-block;
     border-radius: 5px;
     text-transform: uppercase;
+    text-align: left;
 
     @include breakpoint(mobileonly) {
-        padding: 15px 80px 15px 15px;
+        padding: 10px 50px 13px 15px;
         font-size: 14px;
         line-height: 16px;
         background-position: 97% 7px;
