--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -127,6 +127,7 @@
     text-align: center;
 
     // border: 1px solid #d8d8d8;
+    
 
     &__img{
         display: block;
@@ -147,6 +148,10 @@
         i{
             font-size: 35px;
             color: $red;
+        }
+
+        img{
+            width: 50px;
         }
     }
 
