--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -178,6 +178,8 @@
          vertical-align: top;
          float: left;
          margin-right: 10px;
+         overflow: hidden;
+         border-radius: 50%; 
 
          img {
              width: 100%;
