--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 /*********************
 BREAKPOINTS
 *********************/
+@import url("https://use.fontawesome.com/releases/v5.5.0/css/all.css");
+@import url("https://fonts.googleapis.com/css?family=Lato:200,300,400,400i,700,700i|Sintony:400,700");
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
@@ -352,28 +354,91 @@ template {
   display: none;
 }
 
-.slick-arrow {
-  padding: 5px;
-  height: 30px;
-  width: 30px;
+/* Font for headlines */
+h1, h2, h3 {
+  font-family: "lato", sans-serif;
 }
-.slick-arrow:before {
+
+/* Font colors and size for headlines */
+h1 {
+  color: #333;
+  font-size: 40px;
+  line-height: 48px;
+  margin: 0;
+  font-family: "Lato", helvetica, arial, sans-serif;
+  font-weight: 300;
+}
+
+h2 {
+  color: #da2128;
+  font-size: 22px;
+  line-height: 28px;
+  font-weight: normal;
+  margin: 0;
+}
+@media (max-width: 480px) {
+  h2 {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 15px;
+  }
+}
+
+h3 {
+  font-size: 20px;
+  line-height: 28px;
+  color: #FFF;
+  margin: 0;
+}
+
+.event-details {
+  table-layout: fixed;
+  width: 100%;
+  font-size: 16px;
+  margin-top: 30px;
+  color: #333;
+}
+@media (max-width: 480px) {
+  .event-details [class^=col-] {
+    padding-bottom: 15px;
+  }
+}
+
+.event-details i {
+  font-size: 30px;
+  padding-right: 10px;
+  position: relative;
+  top: 5px;
   color: #da2128;
 }
 
-@media (min-width: 768px) and (max-width: 900px) {
-  .slider, .slick-slider {
-    max-width: calc(100% - 40px);
-    margin-left: auto;
-    margin-right: auto;
+@media (max-width: 480px) {
+  .event-title {
+    font-size: 18px;
+    line-height: 22px;
   }
 }
+
 @media (max-width: 480px) {
-  .slider, .slick-slider {
-    max-width: calc(100% - 40px);
-    margin-left: auto;
-    margin-right: auto;
+  .event-type {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 15px;
   }
+}
+
+.headline-container {
+  background: rgba(255, 255, 255, 0.8);
+  padding: 20px 10px;
+}
+
+.headline {
+  padding: 0 0 15px 0;
+}
+
+.description {
+  color: #333;
+  font-size: 15px;
 }
 
 /* --------------------------
@@ -434,6 +499,10 @@ body {
 
 .mt20 {
   margin-top: 20px;
+}
+
+.mt30 {
+  margin-top: 30px;
 }
 
 .pad-x10 {
@@ -507,6 +576,20 @@ body {
   font-size: 20px;
   line-height: 28px;
   margin-bottom: 20px;
+}
+
+a:visited {
+  color: currentColor !important;
+  text-decoration: none !important;
+}
+
+a:hover {
+  color: currentColor !important;
+  text-decoration: none !important;
+}
+
+a {
+  text-decoration: none !important;
 }
 
 .profile__img {
@@ -621,6 +704,30 @@ body {
 
 .inline-block {
   display: inline-block;
+}
+
+.slick-arrow {
+  padding: 5px;
+  height: 30px;
+  width: 30px;
+}
+.slick-arrow:before {
+  color: #da2128;
+}
+
+@media (min-width: 768px) and (max-width: 900px) {
+  .slider, .slick-slider {
+    max-width: calc(100% - 40px);
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 480px) {
+  .slider, .slick-slider {
+    max-width: calc(100% - 40px);
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .lesson-card {
@@ -764,9 +871,6 @@ body {
   font-weight: 900;
 }
 
-.quote {
-  max-width: 500px;
-}
 @media (min-width: 768px) and (max-width: 900px) {
   .quote {
     margin-left: auto;
@@ -813,7 +917,7 @@ body {
   font-size: 14px;
   line-height: 22px;
   float: left;
-  padding-left: 40px;
+  padding-left: 0;
   padding-right: 30px;
   position: relative;
   margin-top: 20px;
@@ -828,7 +932,7 @@ body {
   background-size: contain;
   position: absolute;
   top: 0;
-  left: 135px;
+  left: 100px;
   font-size: 30px;
   font-style: normal;
   font-weight: 900;
@@ -862,7 +966,7 @@ body {
 }
 
 .module-block {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 @media (max-width: 480px) {
   .module-block {
@@ -922,7 +1026,7 @@ body {
 .cta-btn--red {
   background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg.png) no-repeat 96% 7px #da2128;
   border: 2px solid #da2128;
-  color: #ffffff;
+  color: #ffffff !important;
   background-size: 25px;
 }
 .cta-btn--red:hover {
@@ -1321,93 +1425,6 @@ form.form .pd-radio .value span {
 }
 
 /* END OF FORM inline styling */
-/* Font for headlines */
-h1, h2, h3 {
-  font-family: "lato", sans-serif;
-}
-
-/* Font colors and size for headlines */
-h1 {
-  color: #333;
-  font-size: 40px;
-  line-height: 48px;
-  margin: 0;
-  font-family: "Lato", helvetica, arial, sans-serif;
-  font-weight: 300;
-}
-
-h2 {
-  color: #da2128;
-  font-size: 22px;
-  line-height: 28px;
-  font-weight: normal;
-  margin: 0;
-}
-@media (max-width: 480px) {
-  h2 {
-    font-size: 18px;
-    line-height: 22px;
-    margin-bottom: 15px;
-  }
-}
-
-h3 {
-  font-size: 20px;
-  line-height: 28px;
-  color: #FFF;
-  margin: 0;
-}
-
-.event-details {
-  table-layout: fixed;
-  width: 100%;
-  font-size: 16px;
-  margin-top: 30px;
-  color: #333;
-}
-@media (max-width: 480px) {
-  .event-details [class^=col-] {
-    padding-bottom: 15px;
-  }
-}
-
-.event-details i {
-  font-size: 30px;
-  padding-right: 10px;
-  position: relative;
-  top: 5px;
-  color: #da2128;
-}
-
-@media (max-width: 480px) {
-  .event-title {
-    font-size: 18px;
-    line-height: 22px;
-  }
-}
-
-@media (max-width: 480px) {
-  .event-type {
-    font-size: 18px;
-    line-height: 22px;
-    margin-bottom: 15px;
-  }
-}
-
-.headline-container {
-  background: rgba(255, 255, 255, 0.8);
-  padding: 20px 10px;
-}
-
-.headline {
-  padding: 0 0 15px 0;
-}
-
-.description {
-  color: #333;
-  font-size: 15px;
-}
-
 .footer {
   padding: 35px 0 30px 0;
   font-size: 11px;
