--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,4 +1,7 @@
- /* Font for headlines */
+
+@import url('https://use.fontawesome.com/releases/v5.5.0/css/all.css');
+@import url('https://fonts.googleapis.com/css?family=Lato:200,300,400,400i,700,700i|Sintony:400,700');
+/* Font for headlines */
  h1, h2, h3 {
     font-family: 'lato', sans-serif;
    }
